<resources>
    <string name="app_name">ATCINE</string>
    <string name="hint_mobile_or_email">Enter Email or Mobile</string>
    <string name="hint_empty_password">Enter Password</string>
    <string name="please_wait">Please wait</string>
    <string name="new_comment">New comment</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="sign_in_to_this_account">Sign in to this account?</string>
    <string name="series_will_be_available_soon">Series will be available soon</string>
    <string name="ok">Ok</string>
    <string name="sign_out_from_this_account">Sign Out from this account?</string>
    <string name="select_your_profile">Select Your Profile</string>
    <string name="video_playback">Video Playback</string>
    <string name="cellular_data_usage">Cellular Data Usage</string>
    <string name="automatic">Automatic</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="wifi_only">Wifi Only</string>
    <string name="internal_storage">internal storage</string>
    <string name="legal">Legal</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="privacy">Privacy</string>
    <string name="cookie_preferences">Cookie Preferences</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="no_movies">No Movies</string>
    <string name="downloads">Downloads</string>
    <string name="movies_and_tv_shows_you_download_appear_here">Movies and TV shows you download appear here.</string>
    <string name="find_something_to_download">Find Something To Download</string>
    <string name="upload_user_image">Upload user image</string>
    <string name="save_changes">Save changes</string>
    <string name="_0_0">0/0</string>
    <string name="_0_episodes">0 Episodes.</string>
    <string name="see_what_s_next">See what\'s next</string>
    <string name="watch_the_cinema">Watch the cinema</string>
    <string name="in_your_home">in your home</string>
    <string name="watch_anywhere">Watch anywhere</string>
    <string name="login">login</string>
    <string name="cancel">Cancel</string>
    <string name="devices">Devices</string>
    <string name="price">Price</string>
    <string name="join_us">Join us</string>
    <string name="find_help_online">Find Help Online</string>
    <string name="contact_atcine_customer_service">Contact Atcine Customer Service</string>
    <string name="we_ll_connect_the_call_for_free_using_internet_connection">we\'ll connect the call for free using internet connection.</string>
    <string name="call_now">CALL NOW</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="welcome_back">Welcome Back</string>
        <string name="we_miss_you_from_the_last_time">we miss you from the last time.</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="forget_my_password">Forget my password</string>
    <string name="sign_up">Sign up</string>
    <string name="you_have_added_nothing_yet">You have added nothing yet</string>
    <string name="tim_miller">Tim Miller.</string>
    <string name="writers">Writers:</string>
    <string name="rhett_reese_paul_wernick">Rhett Reese, Paul Wernick.</string>
    <string name="release_date">Release Date:</string>
    <string name="_12_february_2016_usa">12 February 2016 (USA).</string>
    <string name="type">Type:</string>
    <string name="family_fantasy_adventure">Family, Fantasy, Adventure.</string>
    <string name="language">Language:</string>
    <string name="language1">Language</string>
    <string name="english">EN</string>
    <string name="cast">Cast</string>
    <string name="choose_a_plan_that_s_right_for_you">Choose a plan that\'s right for you.</string>
    <string name="your_plan_nuunlimted_streaming_in_hd_and_ultra_hd_nat_11_99">your plan  Unlimited Streaming in HD and Ultra HD  at 11.99$ .</string>
    <string name="choose_your_plan">Choose your plan.</string>
    <string name="see_the_plans">See the Plans</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="create_your_account">Create your account</string>
    <string name="use_your_email_and_create_password_to_watch_atcine_on_any_device_at_any_time">Use your email and create password to watch Atcine on any Device at any time.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continueStr">Continue</string>
    <string name="need_help">Need Help?</string>
    <string name="setup_your_payment">Setup your Payment</string>
    <string name="no_commitments">No commitments</string>
    <string name="card_or_debit_card">Card or Debit Card</string>
    <string name="paypal">PayPal</string>
    <string name="setup_your_paypal">Setup your PayPal</string>
    <string name="to_finish_sign_up_click_the_below_button_and_login_into_paypal_using_your_email_and_password">To finish sign-up, click the below button and login into PayPal using your email and password.</string>
    <string name="continue_to_paypal">continue to PayPal</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="setup_your_payment_gateway">Setup your Payment Gateway</string>
    <string name="your_plan_nunlimted_streaming_in_hd_and_ultra_hd_nat_11_99">your plan  Unlimited Streaming in HD and Ultra HD  at 11.99$ .</string>
    <string name="change">Change</string>
    <string name="to_finish_sign_up_choose_the_payment_gateway">To finish sign-up, choose the payment gateway.</string>
    <string name="already_have_account_sign_in_now">Already have account? Sign in now.</string>
    <string name="add_comment">Add comment</string>
    <string name="no_result_found">No Result Found</string>
    <string name="app_setting">App Setting</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="more_like_this">More Like This</string>
    <string name="_2_870_979_views">2,870,979 views</string>
    <string name="write_comment">Write Comment</string>
    <string name="choose_what_you_want_to_watch">Choose what you want to watch</string>
    <string name="downgrade_or_upgrade_anytime">Downgrade or upgrade anytime</string>
    <string name="series">Series</string>
    <string name="or">or</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="ken_jeong_you_complete_me">Ken jeong you complete me</string>
    <string name="add_profile">Add Profile</string>
    <string name="remind_me">Remind Me</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="director">director</string>
    <string name="writer">writer</string>
    <string name="genres">genres</string>
    <string name="help_center">Help Center</string>
    <string name="my_list">My List</string>
    <string name="play">PLAY</string>
    <string name="info">INFO</string>
    <string name="new_releases">New releases</string>
    <string name="more">More</string>
    <string name="category">Category</string>
    <string name="help">Help</string>
    <string name="sign_in">Sign In</string>
    <string name="watch_on_your_tv">Watch on your TV</string>
    <string name="smart_tvs_playstation_xbox_chromecast_apple_n_tv_blu_ray_players_and_more">Smart TVs, PlayStation, Xbox, Chromecast, Apple   Tv, Blu-ray players and more.</string>
    <string name="watch_instantly_or_download_n_for_later">Watch instantly or download   for later</string>
    <string name="available_on_phone_and_tablets_wherever_you_go">Available on phone and tablets, wherever you go.</string>
    <string name="use_any_computer">Use any computer</string>
    <string name="watch_right_on_atcine_com">Watch right on atcine.com.</string>
    <string name="favorite">Favorite</string>
    <string name="reactions">Reactions</string>
    <string name="share">Share</string>
    <string name="action">Action</string>
    <string name="monthly_price">Monthly price</string>
    <string name="basic">Basic</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="monthly_price_after_free_month_ends_on_3_8_2019">Monthly price after free month ends on 3/8/2019</string>
    <string name="all_genres">All Genres</string>
    <string name="hd_available">HD available</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="download_completed">Download completed.</string>
    <string name="upload_completed">Upload completed.</string>
    <string name="downloading">"Downloading: "</string>
    <string name="failed_download">failed download.</string>
    <string name="cancelled_upload">Cancelled upload.</string>
    <string name="you_dont_have_any_series_downloaded_yet">You don\'t have any series downloaded yet</string>
    <string name="you_dont_have_any_movies_downloaded_yet">You don\'t have any movies downloaded yet</string>
    <string name="downloading1">Downloading</string>
    <string name="download_first">download first</string>
    <string name="done">done</string>
    <string name="episodes">Episodes</string>
    <string name="season">Season</string>
    <string name="error_happened">error happened</string>
    <string name="expired_account">You Account has been expired!! would you like to re-activate it?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_downloads">My Downloads</string>
    <string name="profile">Profile</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="my_movies">My Movies</string>
    <string name="my_series">My Series</string>
    <string name="settings">Settings</string>
    <string name="cant_be_empty">Required field</string>
    <string name="invalid_email">invalid email</string>
    <string name="mismatch">mismatch</string>
    <string name="delete_this_comment">Delete this comment?</string>
    <string name="seasons">Seasons</string>
    <string name="downloaded">Downloaded</string>
    <string name="download">Download</string>
    <string name="trailer">Trailer</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="hours_ago"> hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="start_from_where_you_left">Do you want to start from where you left?</string>
    <string name="resume">Resume</string>
    <string name="start_over">Start over</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="arabic">ع</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_up_to_watch">Sign up to watch Atcine on any device at any time.</string>
    <string name="play_trailer">Play trailer</string>
    <string name="no_data_available">No data available</string>
    <string name="none">None</string>
    <string name="no_subtitle">no subtitle available for this show yet</string>

    <string name="track_selection_title">Select tracks</string>

</resources>
