<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    android:background="@color/black"
    tools:context=".ui.fragment.MyMoviesFragment">


    <TextView
        android:id="@+id/tv_app_setting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:visibility="gone"
        android:drawableStart="@drawable/icon_settings_grey"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_setting"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/icon_account1"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/account"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_setting" />


    <TextView
        android:id="@+id/tv_help"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/icon_help1"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/help"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_account" />



    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/icon_sign_out1"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/sign_out"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_help" />

</androidx.constraintlayout.widget.ConstraintLayout>